Updates based on expected file format

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # ACT Build Env - Not included
 #
-NeverwinterACT/
+ElderScrollsOnlineACT/
 Properties/
-NeverwinterParsing.*
+ElderScrollsOnlineParsing.*
 *.resx
 
 #################
